enhancement: fix responsive text alignment in section 3

--- a/output.css
+++ b/output.css
@@ -1095,6 +1095,10 @@ circle {
   inset: 0px;
 }
 
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
 .-right-\[5px\] {
   right: -5px;
 }
@@ -1105,10 +1109,6 @@ circle {
 
 .bottom-0 {
   bottom: 0px;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
 }
 
 .bottom-\[32px\] {
@@ -1165,18 +1165,6 @@ circle {
 
 .top-\[16px\] {
   top: 16px;
-}
-
-.-bottom-2 {
-  bottom: -0.5rem;
-}
-
-.-bottom-8 {
-  bottom: -2rem;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
 }
 
 .isolate {
@@ -2949,10 +2937,6 @@ circle {
   background-color: rgb(0 0 0 / 0.5);
 }
 
-.bg-black\/60 {
-  background-color: rgb(0 0 0 / 0.6);
-}
-
 .bg-black\/80 {
   background-color: rgb(0 0 0 / 0.8);
 }
@@ -3168,6 +3152,11 @@ circle {
   padding-right: 18px;
 }
 
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .px-\[24px\] {
   padding-left: 24px;
   padding-right: 24px;
@@ -3236,16 +3225,6 @@ circle {
 .py-\[8px\] {
   padding-top: 8px;
   padding-bottom: 8px;
-}
-
-.px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 
 .pb-12 {
@@ -4361,6 +4340,10 @@ h3 {
     margin-left: 15px;
     margin-right: 15px;
   }
+
+  .max-md-2\:items-center {
+    align-items: center;
+  }
 }
 
 @media not all and (min-width: 679px) {
@@ -4606,16 +4589,6 @@ h3 {
     padding-right: 4rem;
   }
 
-  .md\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -4739,11 +4712,6 @@ h3 {
 
   .md\:gap-4 {
     gap: 1.6rem;
-  }
-
-  .md\:px-4 {
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
   }
 }
 
